# CREDO

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  comparison.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
04_methods/: perturbation_conditioned_ecological_uot_formulation.tex
05_min/: minimum_realizable_ot_formulation.tex
06_simulation/: data.py  min_simulation.tex  simulation.py
analysis/: __init__.py  extract_biology_effects.py  extract_credo_decoded_module.py  extract_gse314342_effects.py  hnscc_biology_common.py  merge_counterfactual_biology.py  project_bulk_signatures.py  run_counterfactual_biology.py  score_hnscc_signatures.py  summarize_counterfactuals.py
benchmarks/: benchmark_runner.py  simulation.py
camfnd/: FULL_JOINT_SIMULATION_GUIDE.md  README.md  VISUALIZATION_PIPELINE.md  __init__.py  __main__.py  cli.py  pipeline.py
camfnd/data/: __init__.py  contract.py  multiscreen_benchmark.py  single_screen_benchmark.py
camfnd/evaluation/: __init__.py  data_contract.py  full_joint_sim_cases.py  full_model.py  multiscreen_context_model.py  scdiffeq_additional_datasets.py  scdiffeq_larry.py  scdiffeq_larry_4to6_compare.py  simulator_validation.py  single_screen_model.py
camfnd/models/: __init__.py  coeff_nets.py  context_map.py  embeddings.py  full_coeff_nets.py  full_context_map.py  sinkhorn.py  time_embedding.py
camfnd/numerics/: __init__.py  euler_maruyama.py  particles_np.py  particles_torch.py  truth_coeffs.py
camfnd/scripts/: fetch_scdiffeq_datasets.sh
camfnd/simulation/: __init__.py  full_joint_sim.py  multiscreen_context_sim.py  single_screen_sim.py
config/: schema.py
data/: __init__.py  core.py  hnscc.py
docs/: ARCHIVE_AND_STORAGE.md  BIOLOGY_EXTRACTION.md  H100_RUNBOOK.md  PACKAGE_STRUCTURE.md  license_migration.md  runtime_and_recipes.md  scientific_validation.md  study_model.md
env/: cape-hnscc-minimal.yml  credo-hnscc-minimal.yml
eval/: __init__.py  hnscc.py
losses/: counts.py  regularizers.py  weak_form.py
models/: coefficients.py  context.py  embeddings.py  expression_vae.py  full_model.py  simulator.py  weighted_sde.py
notebooks/: benchmark_validation.py
package/: README.md  pyproject.toml
package/src/cape/: __init__.py
package/src/cape/config/: schema.py
package/src/cape/data/: core.py
package/src/cape/eval/: hnscc.py
package/src/cape/losses/: uot.py  weak_form.py
package/src/cape/models/: context.py  expression_vae.py  full_model.py
package/src/cape/training/: trainer.py
package/src/credo/: __init__.py
package/src/credo/cli/: __init__.py  validate_data.py
package/src/credo/config/: __init__.py  schema.py
package/src/credo/data/: __init__.py  core.py  filters.py  gse314342.py  hnscc.py  problems.py  schema.py  single_time.py  trajectory_view.py
package/src/credo/eval/: __init__.py  gates.py  hnscc.py
package/src/credo/losses/: __init__.py  causal_attention.py  counts.py  endpoint.py  multitime.py  regularizers.py  single_time.py  trajectory.py  uot.py  weak_form.py
package/src/credo/models/: __init__.py  background_trajectory_counterfactual.py  causal_attention_blocks.py  causal_context.py  coefficients.py  context.py  ecology.py  embeddings.py  expression_vae.py  full_model.py  interventions.py  particles.py  simulator.py  single_time_context.py  single_time_counterfactual.py  trajectory_counterfactual.py  transformer_blocks.py  transformer_context.py  weighted_sde.py
package/src/credo/search/: __init__.py  diagnostics.py  manifests.py  metrics.py  objective.py  problem_builders.py  pruning.py  runner.py  schedulers.py  space.py
package/src/credo/training/: __init__.py  manifest.py  pruning.py  single_time_trainer.py  trainer.py  trajectory_batch.py  trajectory_eval.py  trajectory_trainer.py
runners/: export_hnscc_search_records.py  run_cape_hnscc_full.py  run_credo_gse314342.py  run_credo_hnscc_full.py  run_credo_lps_3time.py  run_credo_single_time.py  run_credo_trajectory.py  summarize_hnscc_cv.py
scripts/: _conda_init.sh  _run_hnscc_cv.sh  build_gse314342_credo_input.py  install_bundle.sh  make_gse314342_pilot.py  make_lps_trajectory_input.py  prepare_hnscc_heavy_c_reuse.sh  run_hnscc_biological_findings.sh  run_hnscc_full_pipeline.sh  run_hnscc_h100_heavy_c_default.sh  run_hnscc_h100_heavy_c_fast_300ep.sh  run_hnscc_h100_heavy_c_joint_4cv_2gpu.sh  run_hnscc_h100_heavy_f_best_ur01_guide_vs_shared_4cv.sh  run_hnscc_h100_heavy_f_fast_300ep.sh  run_hnscc_h100_heavy_f_no_guide_optimal_search_4cv_2gpu_v2.sh  run_hnscc_h100_heavy_f_optimal_search_4cv_2gpu.sh  run_hnscc_h100_heavy_f_optimal_search_4cv_2gpu_v2.sh  run_hnscc_h100_heavy_f_parallel_4cv_2gpu.sh  run_hnscc_h100_heavy_f_random_4cv_2gpu.sh  run_hnscc_h100_heavy_f_vram60_75_search_300ep.sh  run_hnscc_local_gpu_sweep.sh  run_hnscc_local_heavy_c_vae_9gb.sh  settings_hnscc_heavy_f_best_ur01.txt  stress_test_trajectory_core.py  stress_test_trajectory_production.py  verify_setup.py
tests/: __init__.py  check_source_hygiene.py  conftest.py  test_biology_analysis.py  test_causal_attention_invariants.py  test_counterfactual_engine.py  test_data_schema.py  test_endpoint_geometry_mass_loss.py  test_endpoint_trainer_pruning.py  test_eval_gates.py  test_expression_loading.py  test_gse314342_trajectory.py  test_hnscc_mass_modes.py  test_hnscc_runner_budget.py  test_import_smoke.py  test_lps_contract.py  test_lps_trajectory_runner_smoke.py  test_multitime_losses.py  test_multitime_randomized_simulation.py  test_pytest_markers.py  test_recipes.py  test_search_layer.py  test_semantic_invariants.py  test_semantics.py  test_single_time_problem.py  test_single_time_runner.py  test_source_hygiene.py  test_study_model.py  test_summarize_hnscc_cv.py  test_tiny_end_to_end.py  test_training_manifest.py  test_trajectory_chunk_equivalence.py  test_trajectory_problem.py  test_trajectory_trainer.py  test_transformer_context_invariants.py  test_transformer_v2.py  test_verify_setup.py  test_weak_form.py  test_weighted_sde_tau_grid.py
training/: trainer.py
(+270 files in other folders)
