[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cape"
version = "0.1.0"
description = "CAPE: A Control-Anchored Ecological Model for Causal Tumor Evolution in Longitudinal Perturb-seq"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pydantic>=2.0",
    "geomloss>=0.2.6",
    "anndata>=0.10",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cape-preprocess = "cape.cli.preprocess:main"
cape-train = "cape.cli.train:main"
cape-evaluate = "cape.cli.evaluate:main"
cape-counterfactual = "cape.cli.counterfactual:main"
