[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credo"
version = "3.0.0a4"
description = "Versioned finite-measure perturbation dynamics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Yu Adam Ding" },
]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "anndata>=0.10",
    "geomloss>=0.2.6",
    "h5py>=3.10",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=14",
    "pydantic>=2.0",
    "pyyaml>=6",
    "torch>=2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]
dev = [
    "build>=1.2",
    "pre-commit>=3",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]

[project.urls]
Homepage = "https://github.com/yuadamding/CREDO"
Repository = "https://github.com/yuadamding/CREDO"

[project.scripts]
credo = "credo.cli:main"

[project.entry-points."credo.recipes"]
"credo.compact_sde_v3__3.0" = "credo.recipes.compact_v3:recipe"
"credo.transformer_sde_v2__2.0" = "credo.recipes.transformer_v2.recipe:recipe"

[project.entry-points."credo.study_codecs"]
native_v3 = "credo.data.native:codec"
five_file_v2 = "credo.data.legacy:codec"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["credo"]
# Frozen transformer-v2 has generated contract tests; the line gate tracks the
# released fresh-training runtime rather than compatibility code.
omit = ["src/credo/recipes/transformer_v2/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
