[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credo"
version = "1.1.3"
description = "Compact CREDO HNSCC transfer package with H100 training launchers and biology extraction"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pydantic>=2.0",
    "geomloss>=0.2.6",
    "anndata>=0.10",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
