[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credo"
version = "2.0.9"
description = "Compact CREDO package for endpoint and multi-time immune trajectory modeling"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "pydantic>=2.0",
    "geomloss>=0.2.6",
    "anndata>=0.10",
]

[tool.setuptools.packages.find]
where = ["src"]
